# p-vector

./: .gitignore  CMakeLists.txt  README.md  config.yml.example  deb822.py  elf_dependency.cpp  elf_dependency.h  entry.h  exception.h  main.cpp  p-vector  package.cpp  package.h  pkgscan.py  utils.h
.ci/: build.sh
.github/workflows/: ci.yml
doc/: .gitignore  00-header.md  10-user-guide.md  11-synopsis.md  12-operations.md  13-configuration.md  14-repo-struct.md  20-developer.md  90-epilogue.md  CMakeLists.txt  Makefile  p-vector.1.xz
native/: CMakeLists.txt  json.hpp  main.cpp  main.h.in
native/include/: package.h
native/lib/: CMakeLists.txt  elf_dependency.cpp  elf_dependency.h  package.cpp  package_archive_custom.cpp  package_archive_custom.h
proto/: CMakeLists.txt  result.proto
python/: CMakeLists.txt  abbsdb.sql  add-foreign-key.sql  check_elf.py  deb822.py  dpkg_version.py  foreignkey.sql  internal_db.py  internal_dpkg_version.py  internal_pkgscan.py  internal_print.py  module_check_elf.py  module_config.py  module_gc.py  module_ipc.py  module_release.py  module_scan.py  module_sync.py  pkgissues.sql  pkgscan.py  print.py  test_vercomp.py  vercomp.sql
