find_package(Protobuf REQUIRED)

file(GLOB PROTO_FILES "*.proto")

protobuf_generate_cpp(PROTO_SOURCES PROTO_HEADERS ${PROTO_FILES})
protobuf_generate_python(PROTO_PYFILE ${PROTO_FILES})
install(FILES ${PROTO_PYFILE} DESTINATION ${LIBEXEC_PATH})

add_custom_target(proto
        DEPENDS ${PROTO_HEADERS} ${PROTO_SOURCES} ${PROTO_PYFILE})

set(PROTO_HEADERS ${PROTO_HEADERS} PARENT_SCOPE)
set(PROTO_SOURCES ${PROTO_SOURCES} PARENT_SCOPE)
set(PROTO_PYFILE ${PROTO_PYFILE} PARENT_SCOPE)
set(Protobuf_LIBRARIES ${Protobuf_LIBRARIES} PARENT_SCOPE)
